Update and rename index.html to root/index.html

--- a/root/index.html
+++ b/root/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>s3buck.it - WORN Object Storage</title>
+  <title>s3buck.it</title>
   <style>
     body {
       margin: 0;
@@ -59,7 +59,8 @@
   </style>
 </head>
 <body>
-  <h1>Your data dies here.</h1>
+  <h1>s3buck.it</h1>
+  <h2>Your data dies here.</h2>
   <p class="subtitle">WORN object storage: Write Once, Read Never.</p>
   <button class="cta" onclick="alert('Feature not available. Data already forgotten.')">
     Launch Console
@@ -72,7 +73,7 @@
   </section>
 
   <footer>
-    Parody product. Not affiliated with Amazon. Backups not guaranteed, satisfaction not included.
+    Parody product. Backups not guaranteed, satisfaction not included. Not affiliated with Amazon, please don't sue us.
   </footer>
 </body>
 </html>
